--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
+    "predev": "node scripts/ensureNode20.cjs",
     "dev": "vite",
+    "prebuild": "node scripts/ensureNode20.cjs",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "lint": "npm exec --yes --package=node@20 -- node node_modules/eslint/bin/eslint.js .",
+    "typecheck": "tsc --noEmit",
+    "prepreview": "node scripts/ensureNode20.cjs",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "pretest:smoke": "node scripts/ensureNode20.cjs",
+    "test:smoke": "playwright test",
+    "guardian": "npm run build && npm run test:smoke",
+    "prepare": "node scripts/autoUseNode.cjs && husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,7 +55,6 @@
     "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
-
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
@@ -68,6 +78,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
@@ -80,8 +91,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "husky": "^9.1.7",
     "jsdom": "^20.0.3",
     "lovable-tagger": "^1.1.13",
+    "playwright": "^1.58.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
