--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepreview": "node scripts/ensureNode20.cjs",
     "preview": "vite preview",
     "test": "vitest run",
+    "test:unit": "vitest run src/utils/jsonResume/jsonResumeExport.test.ts",
     "test:watch": "vitest",
     "pretest:smoke": "node scripts/ensureNode20.cjs",
     "test:smoke": "playwright test",
@@ -86,6 +87,8 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
